# VishalV-QuadB

./: .gitignore  ReadMe.md
Week1/Day1/: README.md
Week1/Day1/icp-rust-project/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Week1/Day1/icp-rust-project/src/icp-rust-project-backend/: Cargo.toml
Week1/Day2/data_storage_canister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Week1/Day3/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Week1/Day3/src/persistent_counter_backend/: Cargo.toml
Week1/Day3/src/persistent_counter_backend/src/: lib.rs
Week1/Day3/src/persistent_counter_frontend/: package.json
Week1/Day4/todo_app/: package-lock.json
Week2/Day1/: readme.md
Week2/Day2/hello_solana/: Anchor.toml  Cargo.toml
Week2/Day2/hello_solana/tests/: hello_solana.ts
Week2/Day3/user-data-anchor/: Anchor.toml
Week2/Day3/user-data-anchor/tests/: user-data-anchor.ts
Week2/Day4/SPL token/: readme.md
Week2/Day5/crud-dapp/: package-lock.json
Week3/Day1/: Readme.md  RealEstatekToken.sol
Week3/Day2/gas-fee/: README.md
Week3/Day2/gas-fee/cache/: .hardhat-network-instances.json  solidity-files-cache.json
Week3/Day2/gas-fee/contracts/: GasComparison.sol
Week3/Day3/ReentrancyAttack/: package-lock.json  package.json
Week3/Day3/ReentrancyAttack/contracts/: Attacker.sol  SafeBank.sol  VulnerableBank.sol
Week3/Day3/ReentrancyAttack/test/: reentrancy.js  safeBank.js  safeBankAttack.js  safeBankAvoids.js
Week4/Day1/counter/: Move.toml
Week4/Day1/counter/sources/: counter.move
(+22 files in other folders)
